# angular-bazel-example

./: .gitignore  BUILD.bazel  WORKSPACE  kill  package.json  tsconfig.json
api/: BUILD.bazel
api/echo_service/: BUILD.bazel  echo_service.proto
backend/: BUILD
backend/src/: CarService.java  CarsServlet.java
backend/webapp/: BUILD.bazel
backend/webapp/WEB-INF/: web.xml
external_rule/: BUILD.bazel  WORKSPACE  index.ts  some_provider.ts
src/: BUILD.bazel  app.component.spec.ts  app.component.ts  app.module.ts  app.ts  car.service.ts  index.html
src/hello-world/: BUILD.bazel  hello-world.component.ts  hello-world.module.ts
src/public-api/: BUILD.bazel  index.ts
src/public-api/hello-world/: hello-world.component.ts
tools/: bazel.rc
