package(default_visibility = ["//visibility:public"])

exports_files(["tsconfig.json"])

load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
  name = "ts_library",
  module_name = "external_rule",
  srcs = glob(["*.ts", "**/*.ts"]),
  tsconfig = "tsconfig.json",
)

ng_module(
  name = "ng_module",
  module_name = "external_rule",
  srcs = glob(["*.ts", "**/*.ts"]),
  tsconfig = "tsconfig.json",
  deps = [
      "@rxjs",
  ]
)
