package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")

ng_module(
    name = "src",
    srcs = [
        "app.component.ts",
        "app.module.ts",
        "main.ts",
    ],
    tsconfig = ":tsconfig.json",
    deps = ["//src/hello-world"],
)

# Needed because the devserver only loads static files that appear under this
# package.
genrule(
    name = "zone.js",
    srcs = ["//:node_modules/zone.js/dist/zone.min.js"],
    outs = ["zone.min.js"],
    cmd = "cp $< $@",
)

load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

ts_devserver(
    name = "devserver",
    entry_module = "angular_bazel_example/src/main",
    scripts = ["//:angular_bundles"],
    serving_path = "/bundle.min.js",
    static_files = [
        ":zone.js",
        "index.html",
    ],
    deps = ["//src"],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle", "nodejs_binary")

rollup_bundle(
    name = "bundle",
    entry_point = "src/main",
    deps = ["//src"],
)

nodejs_binary(
    name = "prodserver",
    args = ["./src"],
    data = [
        "index.html",
        ":bundle",
        ":zone.js",
    ],
    entry_point = "http-server/bin/http-server",
)


ts_library(
    name = "test-lib",
    testonly = 1,
    srcs = ["app.component.spec.ts"],
    deps = [":src"],
)

ts_web_test(
    name = "test",
    bootstrap = ["//:angular_bootstrap_scripts"],
    deps = [
        ":test-lib",
        "//:angular_bundles",
        "//:angular_test_bundles",
    ],
)
