package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "public-api",
    srcs = [
        "index.ts",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "//src/public-api/hello-world",
        "@rxjs",
    ],
)
